--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   flutter_map: ^0.14.0
   url_launcher: ^6.0.10
+#  simple_permissions: ^0.1.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
