--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flutter_map: ^0.14.0
   url_launcher: ^6.0.10
 #  simple_permissions: ^0.1.9
+  google_sign_in: ^5.1.0
+  firebase_auth: ^3.2.0
+  firebase: ^9.0.2
+  firebase_core: ^1.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
