--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_auth: ^3.2.0
   firebase: ^9.0.2
   firebase_core: ^1.10.0
+  firebase_storage: ^10.1.0
+  path: ^1.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
